--- a/Swimmer_seller/app/src/main/res/values/themes.xml
+++ b/Swimmer_seller/app/src/main/res/values/themes.xml
@@ -31,6 +31,14 @@
 
     <style name="Theme.Swimmer_seller" parent="Base.Theme.Swimmer_seller" />
 
+    <!--    Splash Screen Theme-->
+    <style name="AppTheme.Splash" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/white</item>
+        <item name="windowSplashScreenAnimatedIcon">@mipmap/ic_launcher</item>
+        <item name="windowSplashScreenAnimationDuration">1000</item>
+        <item name="postSplashScreenTheme">@style/Theme.Swimmer_seller</item>
+    </style>
+
     <style name="HsbombaramTextAppearance">
         <item name="android:fontFamily">@font/hsbombaram</item>
     </style>
