--- a/Swimmer_seller/app/src/main/res/layout/fragment_sign_up_info.xml
+++ b/Swimmer_seller/app/src/main/res/layout/fragment_sign_up_info.xml
@@ -103,6 +103,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textPostalAddress" />
+
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -123,8 +124,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="8dp"
-                android:orientation="horizontal"
-                android:baselineAligned="false">
+                android:baselineAligned="false"
+                android:orientation="horizontal">
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/textInputLayoutCompanyBank"
@@ -142,7 +143,7 @@
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/textInputLayoutCompanyAccount"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginStart="4dp"
                     android:layout_weight="1"
@@ -155,13 +156,6 @@
                         android:inputType="number" />
                 </com.google.android.material.textfield.TextInputLayout>
             </LinearLayout>
-
-            <View
-                android:id="@+id/divider"
-                android:layout_width="match_parent"
-                android:layout_height="3dp"
-                android:layout_marginTop="12dp"
-                android:background="?android:attr/listDivider" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/textInputLayoutManagerName"
@@ -203,7 +197,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginStart="4dp"
-                    android:text="@string/prompt_verify"/>
+                    android:text="@string/prompt_verify" />
             </LinearLayout>
 
             <LinearLayout
@@ -253,12 +247,21 @@
 
             </LinearLayout>
 
+            <CheckBox
+                android:id="@+id/checkBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="@string/checkbox_info_usage" />
             <Button
                 android:id="@+id/buttonSignUp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
+                android:enabled="false"
                 android:text="@string/action_signup" />
+
+
 
 
         </LinearLayout>
