--- a/Swimmer_customer/app/src/main/res/values/themes.xml
+++ b/Swimmer_customer/app/src/main/res/values/themes.xml
@@ -52,7 +52,7 @@
 
     <!--    Splash Screen Theme-->
     <style name="AppTheme.Splash" parent="Theme.SplashScreen">
-        <item name="windowSplashScreenBackground">@color/white</item>
+        <item name="windowSplashScreenBackground">#FFFFFF</item>
         <item name="windowSplashScreenAnimatedIcon">@mipmap/ic_launcher</item>
         <item name="windowSplashScreenAnimationDuration">1000</item>
         <item name="postSplashScreenTheme">@style/Theme.Swimmer_customer</item>
