--- a/Swimmer_seller/app/src/main/res/layout/fragment_product_list.xml
+++ b/Swimmer_seller/app/src/main/res/layout/fragment_product_list.xml
@@ -44,6 +44,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="10dp"
                     android:inputType="none"
+                    android:text="전체"
                     app:simpleItems="@array/productFilter" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -60,6 +61,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="none"
+                    android:text="등록순"
                     app:simpleItems="@array/productSort" />
             </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
