--- a/Swimmer_customer/app/src/main/res/layout/fragment_detail_address.xml
+++ b/Swimmer_customer/app/src/main/res/layout/fragment_detail_address.xml
@@ -17,7 +17,9 @@
         android:id="@+id/textInputLayoutDetailAddressName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
         android:hint=""
         android:transitionGroup="true"
         app:endIconMode="clear_text">
@@ -35,7 +37,9 @@
         android:id="@+id/textViewApiAddress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
         android:text=""
         android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
@@ -43,7 +47,9 @@
         android:id="@+id/textInputLayoutDetailAddress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
         android:hint=""
         android:transitionGroup="true"
         app:endIconMode="clear_text">
@@ -61,7 +67,9 @@
         android:id="@+id/textInputLayoutDetailAddressPhone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
         android:hint=""
         android:transitionGroup="true"
         app:endIconMode="clear_text">
@@ -78,7 +86,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="20dp"
+        android:layout_marginRight="10dp"
         android:orientation="horizontal">
 
         <Button
