feat : Glide 라이브러리 적용 이미지 로딩

--- a/Swimmer_seller/app/src/main/res/layout/row_product.xml
+++ b/Swimmer_seller/app/src/main/res/layout/row_product.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:clickable="true"
     android:orientation="vertical"
     android:padding="10dp">
@@ -15,17 +15,15 @@
 
         <ImageView
             android:id="@+id/imageViewProduct"
-            android:layout_width="300dp"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
-            android:layout_weight="1"
             android:adjustViewBounds="true"
-            app:srcCompat="@drawable/test_image" />
+            app:srcCompat="@drawable/loading_placeholder" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
             android:orientation="vertical">
 
             <TextView
@@ -33,32 +31,42 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="상품명"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/textViewCategory"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="대분류 > 중분류 > 소분류" />
+                android:text="대분류 > 중분류 > 소분류"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
 
             <TextView
                 android:id="@+id/textViewProductHashTag"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="#태그1 # 태그2 #태그3" />
+                android:text="#태그1 # 태그2 #태그3"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
+
+            <View
+                android:id="@+id/view2"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
 
             <TextView
                 android:id="@+id/textViewProductPrice"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="설정 가격 : xxxx원"
-                tools:layout_gravity="bottom" />
+                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
 
             <TextView
                 android:id="@+id/text_view_reg_date"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="등록일 : 000-00-00" />
+                android:text="등록일 : 000-00-00"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
