refactor: splash gif로 변경

--- a/Swimmer_seller/app/src/main/res/values/themes.xml
+++ b/Swimmer_seller/app/src/main/res/values/themes.xml
@@ -34,7 +34,7 @@
     <!--    Splash Screen Theme-->
     <style name="AppTheme.Splash" parent="Theme.SplashScreen">
         <item name="windowSplashScreenBackground">@color/white</item>
-        <item name="windowSplashScreenAnimatedIcon">@mipmap/ic_launcher</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/splash</item>
         <item name="windowSplashScreenAnimationDuration">1000</item>
         <item name="postSplashScreenTheme">@style/Theme.Swimmer_seller</item>
     </style>
