feat : 상품 목록 필터링, 정렬

--- a/Swimmer_seller/app/src/main/res/layout/fragment_product_list.xml
+++ b/Swimmer_seller/app/src/main/res/layout/fragment_product_list.xml
@@ -43,6 +43,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="10dp"
+                    android:editable="false"
                     android:inputType="none"
                     android:text="전체"
                     app:simpleItems="@array/productFilter" />
@@ -60,8 +61,9 @@
                     android:id="@+id/autoTextViewSort"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:editable="false"
                     android:inputType="none"
-                    android:text="등록순"
+                    android:text="최신순"
                     app:simpleItems="@array/productSort" />
             </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
