--- a/Swimmer_seller/app/src/main/res/layout/row_product.xml
+++ b/Swimmer_seller/app/src/main/res/layout/row_product.xml
@@ -3,69 +3,112 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:clickable="true"
-    android:orientation="vertical"
-    android:padding="10dp">
+    android:padding="10dp"
+    android:orientation="horizontal">
+
+    <ImageView
+        android:id="@+id/imageViewProduct"
+        android:layout_width="100dp"
+        android:layout_height="match_parent"
+        android:layout_marginEnd="10dp"
+        android:adjustViewBounds="true"
+        app:srcCompat="@drawable/loading_placeholder" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/imageViewProduct"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
-            android:adjustViewBounds="true"
-            app:srcCompat="@drawable/loading_placeholder" />
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/textViewProductName"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:text="상품명"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/textViewCategory"
-                android:layout_width="match_parent"
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/buttonProductDetail"
+                style="@style/Widget.Material3.Button.IconButton"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="대분류 > 중분류 > 소분류"
-                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
+                android:minWidth="0dp"
+                android:minHeight="0dp"
+                android:padding="0dp"
+                android:text=""
+                app:icon="@drawable/navigate_next_24px" />
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/textViewCategory"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="대분류 > 중분류 > 소분류"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small"
+            android:textColor="@color/seed" />
+
+        <TextView
+            android:id="@+id/textViewProductHashTag"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="#태그1 # 태그2 #태그3"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
+
+        <View
+            android:id="@+id/view2"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textViewProductHashTag"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="#태그1 # 태그2 #태그3"
-                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
-
-            <View
-                android:id="@+id/view2"
+                android:id="@+id/textView24"
                 android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_weight="1" />
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:text="설정 가격" />
 
             <TextView
                 android:id="@+id/textViewProductPrice"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="설정 가격 : xxxx원"
+                android:layout_weight="7"
+                android:text="xxxx원"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView26"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:text="등록일" />
 
             <TextView
                 android:id="@+id/text_view_reg_date"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="등록일 : 000-00-00"
+                android:layout_weight="7"
+                android:text="000-00-00"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small" />
         </LinearLayout>
     </LinearLayout>
