--- a/Swimmer_seller/app/src/main/res/layout/row_product.xml
+++ b/Swimmer_seller/app/src/main/res/layout/row_product.xml
@@ -36,16 +36,11 @@
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:textStyle="bold" />
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/buttonProductDetail"
-                style="@style/Widget.Material3.Button.IconButton"
+            <ImageView
+                android:id="@+id/imageViewIcon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:minWidth="0dp"
-                android:minHeight="0dp"
-                android:padding="0dp"
-                android:text=""
-                app:icon="@drawable/navigate_next_24px" />
+                android:src="@drawable/navigate_next_24px"/>
 
         </LinearLayout>
 
