--- a/Swimmer_customer/app/src/main/res/layout/fragment_product_detail_tab.xml
+++ b/Swimmer_customer/app/src/main/res/layout/fragment_product_detail_tab.xml
@@ -25,8 +25,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
-                android:scaleType="fitCenter"
-                app:productDetailImage="@{vm.productDetailImage}" />
+                android:scaleType="fitCenter" />
+
         </ScrollView>
 
     </LinearLayout>
