--- a/Swimmer_seller/app/src/main/res/layout/item_product_list.xml
+++ b/Swimmer_seller/app/src/main/res/layout/item_product_list.xml
@@ -13,8 +13,7 @@
         android:layout_width="100dp"
         android:layout_height="match_parent"
         android:layout_marginEnd="10dp"
-        android:adjustViewBounds="true"
-        app:srcCompat="@drawable/loading_placeholder" />
+        android:adjustViewBounds="true" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -28,7 +27,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textViewProductName"
+                android:id="@+id/textViewName"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -53,7 +52,7 @@
             android:textColor="@color/seed" />
 
         <TextView
-            android:id="@+id/textViewProductHashTag"
+            android:id="@+id/textViewHashTag"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="#태그1 # 태그2 #태그3"
@@ -78,7 +77,7 @@
                 android:text="설정 가격" />
 
             <TextView
-                android:id="@+id/textViewProductPrice"
+                android:id="@+id/textViewPrice"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="7"
@@ -99,7 +98,7 @@
                 android:text="등록일" />
 
             <TextView
-                android:id="@+id/text_view_reg_date"
+                android:id="@+id/textViewRegDate"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="7"
